k8s/workloads/ingress/traefik-dashboard.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-public
  namespace: ingress
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: traefik-public-ingress
    app.kubernetes.io/name: traefik
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-private
  namespace: ingress
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: traefik-private-ingress
    app.kubernetes.io/name: traefik
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-public
  namespace: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: traefik-public.homa-server.eu
    external-dns.alpha.kubernetes.io/target: k8s-private.homa-server.eu
spec:
  ingressClassName: traefik-private
  rules:
    - host: traefik-public.homa-server.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard-public
                port:
                  number: 80
  tls:
    - hosts:
        - traefik-public.homa-server.eu
      secretName: traefik-public-homa-server-eu-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-private
  namespace: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: traefik-private.homa-server.eu
    external-dns.alpha.kubernetes.io/target: k8s-private.homa-server.eu
spec:
  ingressClassName: traefik-private
  rules:
    - host: traefik-private.homa-server.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard-private
                port:
                  number: 80
  tls:
    - hosts:
        - traefik-private.homa-server.eu
      secretName: traefik-private-homa-server-eu-tls
